salt/downloads/bugs/fixes/bug_issue_descriptions/salt-56018
### Description of Issue
Embedded Tornado contains Py 3.7 keywords which need to be removed

### Setup
(Please provide relevant configs and/or SLS files (Be sure to remove sensitive info).)

### Steps to Reproduce Issue
From a slack conversation:
```
Think you missed one on the ext.tornado,, building on Amazon Linux 2 Py 3 which is 3.7
5466 /usr/lib/rpm/sepdebugcrcfix: Updated 0 CRC32s, 0 CRC32s did match.
5467 BUILDSTDERR: find: 'debug': No such file or directory
5468 + /usr/lib/rpm/check-buildroot
5469 + /usr/lib/rpm/redhat/brp-compress
5470 + /usr/lib/rpm/redhat/brp-strip-static-archive /usr/bin/strip
5471 + /usr/lib/rpm/brp-python-bytecompile /usr/bin/python 1
5472 Bytecompiling .py files below /builddir/build/BUILDROOT/salt-2999.0.0nb202001290009059414103-0.amzn2.x86_64/usr/lib/python3.7 using /usr/bin/python3.7
5473 *** Error compiling '/builddir/build/BUILDROOT/salt-2999.0.0nb202001290009059414103-0.amzn2.x86_64/usr/lib/python3.7/site-packages/salt/ext/tornado/test/asyncio_test.py'...
5474   File "/usr/lib/python3.7/asyncio_test.py", line 50
5475     ensure_future = asyncio.async
5476                                 ^
5477 SyntaxError: invalid syntax
5478 BUILDSTDERR: error: Bad exit status from /var/tmp/rpm-tmp.24mNaY (%install)
5479 BUILDSTDERR:     Bad exit status from /var/tmp/rpm-tmp.24mNaY (%install)
5480 RPM build errors:
5481 Child return code was: 1
5482 EXCEPTION: [Error()]
5483 Traceback (most recent call last):
5484   File "/usr/lib/python3.7/site-packages/mockbuild/trace_decorator.py", line 96, in trace
5485     result = func(*args, **kw)
5486   File "/usr/lib/python3.7/site-packages/mockbuild/util.py", line 734, in do_with_status
5487     raise exception.Error("Command failed: \n # %s\n%s" % (command, output), child.returncode)
5488 mockbuild.exception.Error: Command failed:
got an asyncio keyword
```

### Versions Report
(Provided by running `salt --versions-report`. Please also mention any differences in master/minion versions.)
